[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/snow.png" type="Texture" id=2]
[ext_resource path="res://snow_tiles.tres" type="TileSet" id=3]
[ext_resource path="res://font-big.tres" type="DynamicFont" id=4]
[ext_resource path="res://font-normal.tres" type="DynamicFont" id=5]

[node name="MainMenu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1336.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 65539, 1, 0, 65544, 2, 0, 65574, 1, 0, 131073, 2, 0, 131104, 2, 0, 196612, 2, 0, 196620, 1, 0, 196643, 2, 0, 262163, 1, 0, 262170, 1, 0, 327689, 2, 0, 327694, 2, 0, 327719, 2, 0, 393245, 2, 0, 458755, 2, 0, 524295, 1, 0, 524326, 1, 0, 589835, 2, 0, 589857, 2, 0, 655362, 1, 0, 655367, 2, 0, 655387, 1, 0, 655391, 1, 0, 720933, 2, 0, 786460, 2, 0, 917505, 3, 0, 917536, 2, 0, 1114139, 2, 0, 1114146, 2, 0, 1114151, 2, 0, 1310727, 1, 0, 1310733, 2, 0, 1376260, 2, 0, 1376286, 1, 0, 1376293, 1, 0, 1441811, 1, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="panel" type="Panel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 145.0
margin_top = 185.0
margin_right = 1005.0
margin_bottom = 525.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Label" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 1336.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.196078 )
text = "Going to Grandmas"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="start" type="Node" parent="." index="4"]

[node name="PlayButton" type="Button" parent="start" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 552.0
margin_top = 264.0
margin_right = 782.0
margin_bottom = 334.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play Game"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="OptionsButton" type="Button" parent="start" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 552.0
margin_top = 416.0
margin_right = 782.0
margin_bottom = 486.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Help"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="QuitGameButton" type="Button" parent="start" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 552.0
margin_top = 560.0
margin_right = 782.0
margin_bottom = 630.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit Game"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="options" type="Node" parent="." index="5"]

[node name="BackButton" type="Button" parent="options" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 552.0
margin_top = 560.0
margin_right = 782.0
margin_bottom = 630.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="explain" type="RichTextLabel" parent="options" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 152.0
margin_top = 192.0
margin_right = 1000.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = false
bbcode_text = "WSAD or Arrow Keys to move.
	
Press ESC to Quit the game.

Press Enter to ignite wood in your way."
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "WSAD or Arrow Keys to move.
	
Press ESC to Quit the game.

Press Enter to ignite wood in your way."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect", "custom_fonts" ]

[node name="story_explainer" type="Node" parent="." index="6"]

[node name="RichTextLabel" type="RichTextLabel" parent="story_explainer" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 152.0
margin_top = 192.0
margin_right = 1000.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Your grandma has instructed you to go over to her hole to eat cookies!

However, wood mounds block the regular path to go to her hole, so you must burn them with matches!

Other matches can be found around the world!

Now, go to grandma's hole and eat cookies!"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Your grandma has instructed you to go over to her hole to eat cookies!

However, wood mounds block the regular path to go to her hole, so you must burn them with matches!

Other matches can be found around the world!

Now, go to grandma's hole and eat cookies!"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="StartGameButton" type="Button" parent="story_explainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 552.0
margin_top = 560.0
margin_right = 782.0
margin_bottom = 630.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Eat cookies!"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="start/PlayButton" to="." method="_on_PlayButton_pressed"]

[connection signal="pressed" from="start/OptionsButton" to="." method="_on_OptionsButton_pressed"]

[connection signal="pressed" from="start/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]

[connection signal="pressed" from="options/BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="story_explainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]


